# horsey

./: .gitignore  CLAUDE.md  README.md  analyze.py  app.py  mise.toml  pyproject.toml  scrape_studies.py  stats.json  weaknesses.json
static/: app.js  index.html  styles.css
